--- a/app/templates/fileTypes/scss.html
+++ b/app/templates/fileTypes/scss.html
@@ -13,6 +13,11 @@
     <span class="label-desc">Use Compass</span>
 </label>
 
+<label ng-show="selectedFile.config.compass">
+    <input type="checkbox" ng-model="selectedFile.config.fullCompass">
+    <span class="label-desc">Full Compass Support</span>
+</label>
+
 <label>
     <span class="label-desc">Output Style</span>
     <select ng-model="selectedFile.config.outputStyle">
