--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -506,13 +506,14 @@ body {
 .preprosLog {
 
   margin: 0;
-  padding: 0;
-
-  h1 {
-    margin: 10px;
-    font-size: 20px;
-    font-weight: normal;
+  padding: 10px;
+  .heading {
+    padding-bottom: 5px;
     border-bottom: 1px solid #d3d3d3;
+    margin-bottom: 10px;
+  }
+  h4 {
+    font-weight: normal;
   }
 
   ul {
@@ -520,7 +521,7 @@ body {
     margin-right: 10px;
     padding-bottom: 0;
     margin-bottom: 0;
-    height: 435px;
+    height: 420px;
     overflow: auto;
     li {
       padding: 15px;
@@ -556,10 +557,13 @@ body {
 //Options styles
 .preprosOptions, .preprosAbout {
   padding: 10px;
+  .heading {
+    padding-bottom: 5px;
+    border-bottom: 1px solid #d3d3d3;
+    margin-bottom: 10px;
+  }
   h4 {
     font-weight: normal;
-    padding-bottom: 5px;
-    border-bottom: 1px solid #d3d3d3;;
   }
 }
 
