updated haml icon

--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -378,9 +378,9 @@ body {
         }
       }
       .haml {
-        border-right: 5px solid #BD1550;
+        border-right: 5px solid #556270;
         &:after {
-          border-right: 5px solid #BD1550;
+          border-right: 5px solid #556270;
         }
       }
       .md {
