--- a/docs/templates/index.jade
+++ b/docs/templates/index.jade
@@ -16,11 +16,13 @@ html
 						li
 							a(href='installing.html') Installing
 						li
-							a(href='live-refresh.html') Live Refresh
+							a(href='projects.html') Projects
+						li
+							a(href='files.html') Files
 						li
 							a(href='config.html') Configuring Prepros
 						li
-							a(href='project-files-config.html') Project and file settings
+							a(href='live-refresh.html') Live Refresh
 						li
 							a(href='sass-compass.html') Using Sass &amp; Compass
 						li
