--- a/docs/templates/index.jade
+++ b/docs/templates/index.jade
@@ -42,6 +42,10 @@ html
 						li
 							a(href='slim.html') Using Slim
 						li
+							a(href='keyboard.html') Keyboard Shortcuts
+						li
+							a(href='contribute.html') Contribute to Prepros
+						li
 							<div div id="bsap_1286936" class="bsarocks bsap_70757695faf54d2f2053aaf9e63c7162"></div>
 
 				.docs-content.span9
