Docs complete fix #90

--- a/docs/templates/index.jade
+++ b/docs/templates/index.jade
@@ -32,7 +32,7 @@ html
 						li
 							a(href='stylus.html') Using Stylus
 						li
-							a(href='jade.html') Using jade
+							a(href='jade.html') Using Jade
 						li
 							a(href='coffee-script.html') Using Coffee-Script
 						li
@@ -43,8 +43,6 @@ html
 							a(href='slim.html') Using Slim
 						li
 							a(href='keyboard.html') Keyboard Shortcuts
-						li
-							a(href='contribute.html') Contribute to Prepros
 						li
 							<div div id="bsap_1286936" class="bsarocks bsap_70757695faf54d2f2053aaf9e63c7162"></div>
 
