--- a/app/templates/fileTypes/less.html
+++ b/app/templates/fileTypes/less.html
@@ -4,6 +4,16 @@
 </label>
 
 <label>
+    <input type="checkbox" ng-model="selectedFile.config.strictMath">
+    <span class="label-desc">Strict Maths</span>
+</label>
+
+<label>
+    <input type="checkbox" ng-model="selectedFile.config.strictUnits">
+    <span class="label-desc">Strict Units</span>
+</label>
+
+<label>
     <input type="checkbox" ng-model="selectedFile.config.compress">
     <span class="label-desc">Compress CSS</span>
 </label>
