--- a/app/templates/fileTypes/sass.html
+++ b/app/templates/fileTypes/sass.html
@@ -3,6 +3,11 @@
     <span class="label-desc">Line numbers</span>
 </label>
 
+<label ng-hide="selectedFile.config.compass && selectedFile.config.fullCompass">
+    <input type="checkbox" ng-model="selectedFile.config.unixNewlines">
+    <span class="label-desc">Unix Newlines</span>
+</label>
+
 <label>
     <input type="checkbox" ng-model="selectedFile.config.debug">
     <span class="label-desc">Debug Info</span>
