--- a/app/templates/fileTypes/slim.html
+++ b/app/templates/fileTypes/slim.html
@@ -3,8 +3,12 @@
     <span class="label-desc">Pretty Output</span>
 </label>
 <label>
-    <input type="checkbox" ng-model="selectedFile.config.fourSpaceIndent">
-    <span class="label-desc">Indent By Four Spaces</span>
+    <span class="label-desc">Indent</span>
+    <select ng-model="selectedFile.config.indent">
+        <option value="default">Default</option>
+        <option value="four">Four Spaces</option>
+        <option value="tab">Tab</option>
+    </select>
 </label>
 <label>
     <span class="label-desc">Output Format</span>
