--- a/app/templates/fileTypes/slim.html
+++ b/app/templates/fileTypes/slim.html
@@ -5,7 +5,7 @@
 <label>
     <span class="label-desc">Indent</span>
     <select ng-model="selectedFile.config.indent">
-        <option value="default">Default</option>
+        <option value="default">Default ( 2 spaces )</option>
         <option value="four">Four Spaces</option>
         <option value="tab">Tab</option>
     </select>
