change page title on docs

--- a/docs/templates/jade/head.jade
+++ b/docs/templates/jade/head.jade
@@ -1,9 +1,6 @@
 head
-	title= 'Prepros :: ' + locals.title
-	meta(name='description')(content='Compile less, sass, scss, compass, stylus, cofffeescript, jade, haml, slim and markdown with live browser refresh.')
+	title= 'Prepros :: ' + page.title
 	link(rel="author")(href="https://plus.google.com/u/0/114513538860360992504/posts")
-	meta(property="og:description")(content='Compile less, sass, scss, compass, stylus, cofffeescript, jade, haml, slim and markdown with live browser refresh.')
-	link(rel='chrome-webstore-item')(href="https://chrome.google.com/webstore/detail/bnlfjdjbjiabcgkkjaicjepbhhmeonlm")
 	link(rel='stylesheet')(href='http://alphapixels.com/prepros/css/style.css')
 	script
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
