updated changelog url

--- a/docs/templates/jade/nav.jade
+++ b/docs/templates/jade/nav.jade
@@ -16,7 +16,7 @@ header
 								span.title Faq
 								span.detail Burning Questions
 						li
-							a(href='https://github.com/sbspk/Prepros/blob/master/changelog.md')
+							a(href='http://alphapixels.com/prepros/changelog.html')
 								span.title Changelog
 								span.detail What's new in Prepros
 						li
