Fix typos in documentation

--- a/docs/templates/index.jade
+++ b/docs/templates/index.jade
@@ -28,13 +28,13 @@ html
 						li
 							a(href='js-concat-minify.html') Js Conatenation and Minification
 						li
-							a(href='less.html') Using Less
+							a(href='less.html') Using LESS
 						li
 							a(href='stylus.html') Using Stylus
 						li
 							a(href='jade.html') Using Jade
 						li
-							a(href='coffee-script.html') Using Coffee-Script
+							a(href='coffee-script.html') Using CoffeeScript
 						li
 							a(href='haml.html') Using Haml
 						li
