--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -20,7 +20,7 @@
                         javascript and node-webkit.</p>
 
                     <p>It's designed, developed and maintained by <a ng-click="go('authorTwitter')">Subash Pathak</a> on
-                        <a ng-click="go('githubUrl')">Github</a> under MIT license</p>
+                        <a ng-click="go('githubUrl')">GitHub</a> under MIT license</p>
 
                     <p>
                         To learn more about Prepros, please visit <a ng-click="go('url')">{{config.online.url}}</a>.
