--- a/app/templates/fileTypes/slim.html
+++ b/app/templates/fileTypes/slim.html
@@ -3,7 +3,7 @@
     <span class="label-desc">Pretty Output</span>
 </label>
 <label>
-    <span class="label-desc">Indent</span>
+    <span class="label-desc label-block">Indent</span>
     <select ng-model="selectedFile.config.indent">
         <option value="default">Default ( 2 spaces )</option>
         <option value="four">Four Spaces</option>
@@ -11,7 +11,7 @@
     </select>
 </label>
 <label>
-    <span class="label-desc">Output Format</span>
+    <span class="label-desc label-block">Output Format</span>
     <select ng-model="selectedFile.config.format">
         <option value=":xhtml">XHTML</option>
         <option value=":html5">HTML5</option>
