--- a/app/templates/fileTypes/haml.html
+++ b/app/templates/fileTypes/haml.html
@@ -4,14 +4,14 @@
 </label>
 
 <label>
-    <span class="label-desc">Output Format</span>
+    <span class="label-desc label-block">Output Format</span>
     <select ng-model="selectedFile.config.format">
         <option value="xhtml">XHTML</option>
         <option value="html5">HTML5</option>
     </select>
 </label>
 <label>
-    <span class="label-desc">Output Style</span>
+    <span class="label-desc label-block">Output Style</span>
     <select ng-model="selectedFile.config.outputStyle">
         <option value="indented">Indented</option>
         <option value="ugly">Ugly</option>
