--- a/app/templates/fileTypes/scss.html
+++ b/app/templates/fileTypes/scss.html
@@ -24,7 +24,7 @@
 </label>
 
 <label>
-    <span class="label-desc">Output Style</span>
+    <span class="label-desc label-block">Output Style</span>
     <select ng-model="selectedFile.config.outputStyle">
         <option value="compressed">Compressed</option>
         <option value="compact">Compact</option>
