changed log message

--- a/app/templates/log.html
+++ b/app/templates/log.html
@@ -2,7 +2,7 @@
 
     <h1 class="icomoon-file"></h1>
 
-    <p>Here is nothing yet. You will see log entries after you compile files.</p>
+    <p>No logs found. You will see log entries after you compile files.</p>
 
 </div>
 
