--- a/docs/templates/index.jade
+++ b/docs/templates/index.jade
@@ -54,7 +54,7 @@ html
 						!= page.html
 					div
 						#disqus_thread
-							script
+							script.
 								/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 								var disqus_shortname = 'alphapixelscom'; // required: replace example with your forum shortname
 								/* * * DON'T EDIT BELOW THIS LINE * * */
