--- a/docs/templates/jade/head.jade
+++ b/docs/templates/jade/head.jade
@@ -2,14 +2,14 @@ head
 	title= 'Prepros :: ' + page.title
 	link(rel="author")(href="https://plus.google.com/u/0/114513538860360992504/posts")
 	link(rel='stylesheet')(href='http://alphapixels.com/prepros/css/style.css')
-	script
+	script.
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 			ga('create', 'UA-40440487-1', 'alphapixels.com');
 			ga('send', 'pageview');
-	script
+	script.
 		(function(){
 			var bsa = document.createElement('script');
 			bsa.type = 'text/javascript';
