updated file icons

--- a/app/assets/scss/_files.scss
+++ b/app/assets/scss/_files.scss
@@ -1,13 +1,13 @@
 $scss: #c02ec9;
-$sass: #966955;
-$less: #FA6900;
-$stylus: #00A0B0;
-$jade: #83AF9B;
-$coffee: #EDC951;
-$js: #8A9B0F;
-$haml: #556270;
-$md: #CDB380;
-$slim: #3FB8AF;
+$sass: #774F38;
+$less: #0398e7;
+$stylus: #4fc974;
+$jade: #FA6900;
+$coffee: #93a318;
+$js: #b66ff4;
+$haml: #036564;
+$md: #b24c32;
+$slim: #45ADA8;
 
 $duration : .5s;
 
