--- a/app/templates/project-options.html
+++ b/app/templates/project-options.html
@@ -41,12 +41,12 @@
 
                 <label>
                     <span class="label-desc label-block">Javascripts Folder</span>
-                    <input type="text" ng-model="selectedProject.config.jsPath" class="span4"><br>
+                    <input type="text" ng-model="selectedProject.config.jsPath" class="span4">
                 </label>
 
                 <label>
                     <span class="label-desc label-block">Minified Javascripts Folder</span>
-                    <input type="text" ng-model="selectedProject.config.jsMinPath" class="span4"><br>
+                    <input type="text" ng-model="selectedProject.config.jsMinPath" class="span4">
                 </label>
 
                 <label>
