--- a/app/templates/project-options.html
+++ b/app/templates/project-options.html
@@ -1,4 +1,4 @@
-<div class="modal hide fade" id="optionsModal">
+<div class="modal hide fade project-options" id="optionsModal">
 
     <div class="modal-header">
         <a class="close" data-dismiss="modal">&times;</a>
