docs about multi device testing

--- a/docs/templates/index.jade
+++ b/docs/templates/index.jade
@@ -24,6 +24,8 @@ html
 						li
 							a(href='live-refresh.html') Live Refresh
 						li
+							a(href='multi-device-testing.html') Multi Device Testing
+						li
 							a(href='sass-compass.html') Using Sass &amp; Compass
 						li
 							a(href='js-concat-minify.html') Js Conatenation and Minification
