--- a/app/templates/title-bar.html
+++ b/app/templates/title-bar.html
@@ -2,7 +2,7 @@
     <div class="controls">
         <a ng-click="goWebsite()" class="icomoon-gift highlight" tooltip="A New Version Of Prepros is Available" data-placement="bottom" ng-show="appUpdate"></a>
         <a ng-href="#/home" class="icomoon-home" tooltip="Go to home" data-placement="bottom"></a>
-        <a class="love icomoon-heart-2" tooltip="Help the author" data-placement="bottom" ng-click="supportAuthor()"></a>
+        <a class="love icomoon-heart-2" tooltip="Donate to make Prepros more awesome :-)" data-placement="bottom" ng-click="supportAuthor()"></a>
         <a class="about icomoon-info " tooltip="About Prepros" data-placement="bottom" show-modal-on-click="#aboutModal"></a>
         <a class="about icomoon-mobile-2 " tooltip="Multi Device Testing" data-placement="bottom" show-modal-on-click="#multiDeviceTesting"></a>
         <a ng-href="#/log" class="log icomoon-copy-2" tooltip="App Log" data-placement="bottom"></a>
