--- a/app/templates/title-bar.html
+++ b/app/templates/title-bar.html
@@ -4,7 +4,7 @@
         <a ng-href="#/home" class="icomoon-home" tooltip="Go to home" data-placement="bottom"></a>
         <a class="love icomoon-heart-2" tooltip="Donate to make Prepros more awesome :-)" data-placement="bottom" ng-click="supportAuthor()"></a>
         <a class="about icomoon-info " tooltip="About Prepros" data-placement="bottom" show-modal-on-click="#aboutModal"></a>
-        <a class="about icomoon-mobile-2 " tooltip="Multi Device Testing" data-placement="bottom" show-modal-on-click="#multiDeviceTesting"></a>
+        <a class="about icomoon-mobile-2 " tooltip="Multi Device Live Refresh" data-placement="bottom" show-modal-on-click="#multiDevice"></a>
         <a ng-href="#/log" class="log icomoon-copy-2" tooltip="App Log" data-placement="bottom"></a>
         <a class="options icomoon-cog " tooltip="App Options" data-placement="bottom" ng-click="openOptionsWindow()"></a>
         <a class="to-tray icomoon-arrow-down-right-3" tooltip="Minimize to Tray" data-placement="bottom" ng-click="toTray()"></a>
