--- a/docs/templates/index.jade
+++ b/docs/templates/index.jade
@@ -24,7 +24,7 @@ html
 						li
 							a(href='live-refresh.html') Live Refresh
 						li
-							a(href='multi-device-testing.html') Multi Device Testing
+							a(href='multi-device-live-refresh.html') Multi Device Live Refresh
 						li
 							a(href='sass-compass.html') Using Sass &amp; Compass
 						li
