--- a/docs/templates/jade/foot.jade
+++ b/docs/templates/jade/foot.jade
@@ -17,7 +17,7 @@ footer
 					a(href='http://github.com/sbspk') @sbspk
 			.span8
 				h3 Say Thanks
-				h4 Do you want to help make Prepros more awesome? Please donate.
+				h4 Please donate so I can spend more time making Prepros awesome.
 				p(style="margin-top: 20px;")
 					<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank" style="display: inline-block; position: relative; top: 5px;">
 					<input type="hidden" name="cmd" value="_s-xclick">
