--- a/docs/templates/jade/nav.jade
+++ b/docs/templates/jade/nav.jade
@@ -22,4 +22,4 @@ header
 						li
 							a(href='http://github.com/sbspk/prepros')
 								span.title Github
-								span.detail Get Involved
+								span.detail ♥ Open Source
