--- a/app/templates/sidebar.html
+++ b/app/templates/sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar" ng-controller="SidebarCtrl">
     <ul>
-        <li ng-repeat="project in projects" ng-dblclick="openProjectFolder(project.path)" ng-animate="'animate'">
+        <li ng-repeat="project in projects" ng-dblclick="openProjectFolder(project.path)" ng-animate="'animate'" project-context-menu="project">
             <a ng-href="#/files/{{project.id}}" draggable="false"
                ng-class="{'active' : selectedProject.id == project.id}">{{project.name}}</a>
         </li>
