--- a/application/app/templates/live-server/index.jade
+++ b/application/app/templates/live-server/index.jade
@@ -1,7 +1,7 @@
 html
     head
         title Prepros Projects
-    style
+    style.
         @import url(http://fonts.googleapis.com/css?family=Open+Sans:400);
 
         body {
